--- a/app/src/main/res/layout/fragment_second_frame.xml
+++ b/app/src/main/res/layout/fragment_second_frame.xml
@@ -13,10 +13,9 @@
         android:layout_height="299dp"
         android:scaleType="fitCenter"
         app:riv_corner_radius="12dp"
-        android:background="@drawable/roofers"
+        android:background="@drawable/splashtwo"
         app:riv_mutate_background="true"
         android:layout_marginTop="32dp"
-        app:riv_tile_mode="mirror"
         app:riv_border_color="@color/brand_color"
         app:riv_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
