--- a/app/src/main/res/layout/item_left.xml
+++ b/app/src/main/res/layout/item_left.xml
@@ -29,7 +29,7 @@
                 android:fontFamily="@font/poppins_light"
                 android:background="@drawable/btnlogin"
                 android:padding="5dp"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:layout_marginTop="5dp"
                 android:textSize="16sp"
                 tools:text="farhan" />
