--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,8 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -135,7 +135,7 @@
                     android:layout_width="260dp"
                     android:layout_height="150dp"
                     android:src="@drawable/electrician"
-                    app:layout_constraintStart_toEndOf="@id/image1"
+                    app:layout_constraintStart_toEndOf="@id/image2"
                     app:layout_constraintTop_toTopOf="parent"
                     app:riv_corner_radius="12dp" />
 
@@ -166,7 +166,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
 
-
         <TextView
             android:id="@+id/lastName"
             android:layout_width="wrap_content"
@@ -186,10 +185,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:src="@drawable/baseline_add_24"
             android:layout_marginEnd="16dp"
-            android:tint="@color/white"
             android:layout_marginBottom="16dp"
+            android:src="@drawable/baseline_add_24"
+            android:tint="@color/white"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -202,8 +201,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            app:fabSize="normal"
             app:backgroundTint="@color/white"
+            app:fabSize="normal"
             app:layout_constraintBottom_toTopOf="@+id/add_fab"
             app:layout_constraintEnd_toEndOf="@+id/add_fab"
             app:layout_constraintStart_toStartOf="@+id/add_fab"
@@ -217,11 +216,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/brand_color"
-            android:textStyle="bold"
             android:fontFamily="@font/poppins_medium"
-            android:textSize="12sp"
             android:text="Message"
+            android:textColor="@color/brand_color"
+            android:textSize="12sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/message"
             app:layout_constraintEnd_toStartOf="@+id/message"
             app:layout_constraintTop_toTopOf="@+id/message" />
@@ -235,8 +234,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:elevation="0dp"
-            app:borderWidth="6dp"
             app:backgroundTint="@color/white"
+            app:borderWidth="6dp"
             app:fabSize="normal"
             app:layout_constraintBottom_toTopOf="@+id/message"
             app:layout_constraintEnd_toEndOf="@+id/message"
@@ -251,16 +250,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="Post A Job"
-            android:textStyle="bold"
-            android:textColor="@color/brand_color"
             android:fontFamily="@font/poppins_medium"
+            android:text="Post A Job"
+            android:textColor="@color/brand_color"
             android:textSize="12sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/addPost"
             app:layout_constraintEnd_toStartOf="@+id/addPost"
             app:layout_constraintTop_toTopOf="@+id/addPost" />
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
